--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Giigaa.com</title>
-  <link rel="shortcut icon" href="download(Final).png" type="image/x-icon">
+  <link rel="shortcut icon" href="1659612058469 (1).png" type="image/x-icon">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href='../../../../../external.html?link=https://fonts.googleapis.com/css?family=Raleway:100,400,700'
     rel='stylesheet' type='text/css'>
